# BD_KP

./: .gitignore  README.md
Client/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelItem.cpp  ChannelItem.h  CommonHeader.h  Connector.cpp  Connector.h  CryptographAlice.cpp  CryptographAlice.h  Manager.cpp  Manager.h  Message.cpp  Message.h  MessageLabel.cpp  MessageLabel.h  MessageMenu.cpp  MessageMenu.h  SenderReceiver.cpp  SenderReceiver.h  main.cpp  res.qrc  window.cpp  window.h  window.ui
Server/: .gitignore  CMakeLists.txt  Command.h  CommandReplyKey.h  CommandSendKey.cpp  Cryprograph.cpp  Cryptograph.h  Definitions.h  IncludesToServer.h  Sender.cpp  Sender.h  Server.cpp  Server.h  User.cpp  User.h  database.db  main.cpp
Server/commands/: Command.h  CommandAddToTempTable.cpp  CommandAddToTempTable.h  CommandCreateDialog.cpp  CommandCreateDialog.h  CommandExit.cpp  CommandExit.h  CommandGetUsersInChannel.cpp  CommandGetUsersInChannel.h  CommandInitDB.cpp  CommandInitDB.h  CommandLogin.cpp  CommandLogin.h  CommandReadMessages.cpp  CommandReadMessages.h  CommandRegist.cpp  CommandRegist.h  CommandReplyKey.h  CommandSearch.cpp  CommandSearch.h  CommandSendMessage.cpp  CommandSendMessage.h  CommandUpdateOnline.cpp  CommandUpdateOnline.h  NotifyNewMessage.cpp  NotifyNewMessage.h
Server/sql/: AddChannel.sql  AddContact.sql  AddUser.sql  AddUserInTempTable.sql  CheckInDB.sql  CheckIsUserAdmin.sql  CountUnreadMessage.sql  CreateChat.sql  CreateDialog.sql  ExitUser.sql  GetChannelsByNickname.sql  GetContactsByNickname.sql  GetID.sql  GetMessagesFromDate.sql  GetOnlineUsersInChannel.sql  InitDB.sql  Search.sql  SendMessage.sql  UpdateLastReadMessage.sql  UpdateOnline.sql  getID.sql  getMessagesFromDate.sql  updateAfterExit.sql
